<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tips_jpstart">• 短按五十音按钮播放拼读语音\n• 长按五十音按钮演示文字书写</string>
    <string name="tips_memory">• 左右滑动可切换卡片</string>
    <string name="tips_translate">1.将要翻译的内容输入至原文文本框\n2.点击上方双方向按钮进行翻译</string>
    <string name="tips_pixivillust">• 点击卡片可浏览原图、缩略图和分享插画链接\n• 目前只提供低分辨率插画本地预览，原图需访问插画原址</string>
    <string name="warn_no_wifi">检测到您当前未使用WIFI网络，可能会消耗大量流量，是否允许继续加载？</string>

    <string name="other">其他</string>
    <string name="zhuoyin">浊音</string>
    <string name="memory">记忆</string>
    <string name="hiragana">平假名</string>
    <string name="source_contents">原文：</string>
    <string name="about">关于</string>
    <string name="translation_contents">译文：</string>
    <string name="paste">粘贴</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="translate">翻译</string>
    <string name="auto_check">自动检测</string>
    <string name="setting">设置</string>
    <string name="remember">知道了</string>
    <string name="enter_frame">入口界面</string>
    <string name="chinese">中文</string>
    <string name="japanese">日语</string>
    <string name="hello_world">Hello World !</string>
    <string name="pixiv_illust">Pixiv插画</string>
    <string name="english">英语</string>
    <string name="katakana">片假名</string>
    <string name="row">行</string>
    <string name="copy">复制</string>
    <string name="hint_translate_source">(￣y▽￣)╭ 这里输入原文</string>
    <string name="small_tips">小提示</string>
    <string name="image">图片</string>
    <string name="national_flag">国旗</string>
    <string name="qingyin">清音</string>
    <string name="column">列</string>
    <string name="clear">清空</string>
    <string name="yin">音</string>
    <string name="write">写</string>
    <string name="loading">Loading</string>
    <string name="app_name">五十音图</string>
    <string name="jp_start">五十音图</string>
    <string name="do_not_remind">不再提醒</string>
    <string name="hint_translation_destination">ㄟ( ▔, ▔ )ㄏ 译文为空，我什么也不知道</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aoyin">拗音</string>

    <string name="copy_successfully">已成功复制到剪切板</string>

    <string name="error_unknown">未知错误</string>

    <string name="daily">今日</string>
    <string name="weekly">本周</string>
    <string name="monthly">本月</string>
    <string name="rookie">新人</string>
    <string name="original">原创</string>
    <string name="male">受男性欢迎</string>
    <string name="female">受女性欢迎</string>

    <string name="source_img">原图</string>
    <string name="thumbnail">缩略图</string>
    <string name="share">分享</string>
    <string name="share_to">分享到…</string>

    <string name="save_success">插画已成功下载并保存</string>
    <string name="save_error">插画保存失败</string>

    <string name="warn">提醒</string>

    <string name="one_more_time">全部记住了吗？再来一次吧！</string>

    <string name="one_more_press_to_exit">再按一次退出</string>

    <string name="system_setting">系统设置</string>
    <string name="theme">主题</string>
    <string name="other_setting">其他设置</string>
    <string name="more_setting">更多设置</string>
    <string name="tips_setting">更多设置将来再添加完善。</string>

    <string name="auto">自动</string>
    <string name="day">白天</string>
    <string name="night">夜晚</string>

    <string name="reboot_to_take_effect">请重新启动使设置生效。</string>
    <string name="setting_effect">设置已生效。</string>

    <string name="hello_contents">“我想要一个没广告的轻量级的学习五十音的App。”\n而这便是我开发这个App的初衷。</string>
    <string name="hello_u">Hello U</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_contents">感谢以下开源项目的代码支持和开放平台的数据服务支持。</string>
    <string name="rxjava_rxandroid">RxJava | RxAndroid</string>
    <string name="butterknife">ButterKnife</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="glide">Glide</string>
    <string name="photoview">PhotoView</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="swipecardview">SwipeCardView</string>
    <string name="baidu_translate">百度翻译</string>
    <string name="pixiv">Pixiv</string>
    <string name="here">Here</string>
    <string name="here_contents">如果你喜欢这个App，期望你能打赏一毛两毛。\n( •̀ ω •́ )y</string>
    <string name="now">Now</string>
    <string name="now_contents">当前版本：v2.0.0</string>

    <string name="loading_data">正在加载数据</string>
    <string name="loading_data_success">加载完成</string>
    <string name="loading_data_error">数据加载错误，请重新启动</string>
    <string name="author">Author</string>
    <string name="pwcong">Pwcong</string>
    <string name="title_allow_download_without_wifi">启用移动网络下载</string>
    <string name="summary_allow_download_without_wifi">允许通过需要付费的移动网络下载</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="loading_error">加载失败</string>
    <string name="loading_disallow_pixiv">已禁止在移动网络下加载Pixiv插图</string>
    <string name="translate_error">翻译失败</string>
    <string name="supperzzle">对对碰</string>
    <string name="game">游戏</string>
    <string name="whoami">我是谁</string>
    <string name="help">帮助</string>
    <string name="ranking">排行榜</string>
    <string name="hiragana_rome">平假名 -> 罗马音</string>
    <string name="hiragana_katakana">平假名 -> 片假名</string>
    <string name="katakana_rome">片假名 -> 罗马音</string>
    <string name="sad">/(ㄒoㄒ)/~~</string>
    <string name="one_more_time_2">再来一次</string>
    <string name="exit">退出</string>
    <string name="highedt_score">最高分</string>
    <string name="tips_correct_contents">当前连续答对次数：</string>
    <string name="tips_highest_score_contents">最高连续答对次数：</string>
    <string name="tips_puzzle_contents">我是谁？\n我的平假名、片假名和罗马音是哪个？</string>
    <string name="tips_supperzzle_contents">在规定时间内进行配对，配对方式有：\n1.平假名 -> 罗马音\n2.平假名 -> 片假名\n3.片假名 -> 罗马音</string>
    <string name="trust_to_save_qrcode">是否保存该微信支付二维码？</string>
    <string name="success_to_save">保存成功！</string>
    <string name="fail_to_save">保存失败！</string>
    <string name="saving">正在保存中</string>
</resources>