<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_jpstart"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/jp_start" />
        <item
            android:id="@+id/item_memory"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/memory" />
        <item
            android:id="@+id/item_game"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/game" />
        <item
            android:id="@+id/item_translate"
            android:icon="@drawable/ic_g_translate_black_24dp"
            android:title="@string/translate" />
        <!--<item android:id="@+id/item_pixiv_illust" android:title="@string/pixiv_illust" android:icon="@drawable/ic_local_parking_black_24dp"/>-->

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/item_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
